crates/test-harness/fixtures/test262-lite/fail/parse/break-outside.js
/*---
description: break is not valid at top-level script
negative:
  phase: parse
  type: SyntaxError
---*/
break;
